package rec.data;

message AddressProto {
  message Part {
    optional int32 index = 1;
    optional string name = 2;
  };

  repeated Part part = 1;
};